2003-03-04  John Levon  <levon@movementarian.org>

	* utils/opcontrol:
	* daemon/opd_kernel.h:
	* daemon/opd_image.c:
	* daemon/opd_kernel.c:
	* daemon/oprofiled.c: implement --no-vmlinux.
 	  Remove back compat for is_kernel.

	* gui/uioprof_start.base.ui:
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.h:
	* gui/oprof_start_config.cpp: support the above

	* doc/oprofile.1.in:
	* doc/oprofile.xml: doc the above

2003-03-04  John Levon  <levon@movementarian.org>

	* utils/opcontrol: allow --version, --help early on

2003-03-04  John Levon  <levon@movementarian.org>

	* libop/op_events.c: alter the parser to give file/linenr on
	  error, and handle more whitespace.

2003-03-04  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: add is_prefix(),
	  make the trimmers take an argument

2003-03-04  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/persistent_config.h:

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: add split(), tobool(), touint()

	* utils/opcontrol: don't write BUF_SIZE twice. Write
	  RTC_VALUE properly. Write KERNEL_ONLY

2003-03-03  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp: use --ctrX-event=none,
	  --separate=none. --pid/pgrp-filter=0 was already
	  being done.

2003-03-03  John Levon  <levon@movementarian.org>

	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* doc/opcontrol: add --ctrX-event=none

2003-03-03  Will Cohen  <wcohen@redhat.com>

	* gui/oprof_start.cpp (oprof_start::on_start_profiler): Limit
	  check to onlyl utm_bitmask.

2003-03-03  Will Cohen  <wcohen@redhat.com>

    * events/ia64.itanium2.events:
    * events/ia64.itanium2.unit_masks: Add Itanium 2 events.

2003-03-03  Will Cohen  <wcohen@redhat.com>

    * libop/op_events.h: